src/main/java/com/example/LibManage/Error/CategoryAlreadyExists.java
package com.example.LibManage.Error;

public class CategoryAlreadyExists extends RuntimeException{
    public CategoryAlreadyExists() {
        super("Kategori zaten mevcut");
    }
}
